--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -99,10 +99,10 @@
     <mdl-layout-header class="main-header">
         <mdl-layout-header-row class="main-header-row">
 
-            <mdl-layout-title class="np-text-color-primary np-font-open-sans">{{title}}</mdl-layout-title>
+            <mdl-layout-title class="np-text-color-grey-dark-extra np-font-open-sans">{{title}}</mdl-layout-title>
             <mdl-layout-spacer></mdl-layout-spacer>
             <!-- Navigation. We hide it in small screens. -->
-            <nav class="mdl-navigation mdl-layout--large-screen-only">
+            <nav class="np-font-open-sans mdl-navigation mdl-layout--large-screen-only">
                 <a class="mdl-navigation__link"  routerLink="/home" routerLinkActive="indicator-primary-important np-text-color-important-primary">Home</a>
                 <a class="mdl-navigation__link" routerLink="/portfolio" routerLinkActive="indicator-primary-important np-text-color-important-primary">Portfolio</a>
                 <a class="mdl-navigation__link" routerLink="/about" routerLinkActive="indicator-primary-important np-text-color-important-primary">About</a>
