--- a/src/app/ui/portfolio/portfolio.component.html
+++ b/src/app/ui/portfolio/portfolio.component.html
@@ -1,6 +1,7 @@
-<div class="np-flex-container np-flex-align-center np-flex-justify-content"><code class="np-color-white np-hover-card-up" contentEditable="true">
-  <p>function <span class="function">hello</span>() {{ '{' }}</p>
-  <p>  Log.<span class="function">v</span>("hello", "Visitor");</p>
-  <p>{{ '}' }}</p>
- </code>
-</div>
+ <div class="code np-flex-container np-flex-align-center np-flex-justify-content">
+                <code class="np-color-white np-hover-card-up" contentEditable="true">
+                <p>function <span class="function">hello</span>() {{ '{' }}</p>
+                <p>  Log.<span class="function">v</span>("hello", "Visitor");</p>
+                <p>{{ '}' }}</p>
+            </code>
+            </div>
