--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,21 +1,25 @@
 <div class="np-color-grey">
 
-    
-    <div class="np-layout-content">
-        <div class="code np-flex-container np-flex-align-center np-flex-justify-content">
-            <code class="np-color-white np-hover-card-up" contentEditable="true">
-                <p>function <span class="function">hello</span>() {{ '{' }}</p>
-                <p>  Log.<span class="function">v</span>("hello", "Visitor");</p>
-                <p>{{ '}' }}</p>
-            </code>
-        </div>
-    </div>
-    <div class="np-padding-v-8 np-margin-top-32">
+    <div class="top-wall">
 
-        <div class="profile-action np-font-open-sans">
-            <button mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple><span class="np-font-open-sans np-font-12">See Portfolio</span></button>
 
-            <button mdl-button mdl-colored="primary" mdl-ripple><span class="np-font-open-sans np-font-12 np-font-bold">Download CV</span></button>
+        <div class="np-layout-content wall-frame">
+            <div class="np-flex-layout np-flex-align-items">
+                <div class="profile">
+                    <h4 class="np-font-open-sans np-text-color-white np-text-align-center np-font-light">Welcome to my app development page...</h4>
+                </div>
+
+                <div class="np-margin-top-32">
+
+                    <div class="profile-action np-font-open-sans">
+                        <button mdl-button mdl-button-type="raised" mdl-colored="primary" class="np-color-primary-alpha-6" mdl-ripple><span class="np-font-open-sans np-font-12">See Portfolio</span></button>
+
+                        <!--button mdl-button mdl-colored="primary" mdl-ripple><span class="np-font-open-sans np-font-12 np-font-bold">Download CV</span></button-->
+                    </div>
+
+                </div>
+            </div>
+
         </div>
 
     </div>
