working on portfolio

--- a/src/app/theme/sass/_color.scss
+++ b/src/app/theme/sass/_color.scss
@@ -58,3 +58,13 @@
 .np-color-github{
     background: #333333;
 }
+
+//fancymonk
+
+.np-color-fancymonk{
+    background: #ce1e42;
+}
+
+.np-color-fancymonk-dark{
+    background: #a41834;
+}
