--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -24,7 +24,7 @@
                             <h6 class="np-text-color-primary-light np-font-open-sans np-font-bold np-font-10"><span class="np-underline-small-primary_all">Android &middot; Website &middot; Server</span></h6>
                         </div>
 
-                        <div class="about-subheader np-text-color-accent">
+                        <div class="about-subheader np-text-color-white">
                             <p>
                                 <mdl-icon class="np-layout-align-middle np-font-12 np-margin-right-12 np-text-color-white">email</mdl-icon>nirajprakash13@gmail.com</p>
                             <p>
@@ -32,7 +32,7 @@
                         </div>
 
                         <div class="about-detail np-padding-top-16">
-                            <p class="np-font-open-sans np-font-12 mdl-color-text--grey-400">I’m Android App and Web Developer specializing in front-end and back-end development. Experienced
+                            <p class="np-font-open-sans np-font-12 mdl-color-text--grey-200">I’m Android App and Web Developer specializing in front-end and back-end development. Experienced
                                 with all stages of the development cycle for dynamic web projects.
                             </p>
 
@@ -55,13 +55,10 @@
                     </button>
                             </li>
                         </ul>
-
                     </div>
                 </div>
-
             </div>
         </div>
-
     </div>
 
     <div class="np-layout-content">
@@ -70,41 +67,41 @@
             <div class="np-border-2 np-hover-card-up info-card np-color-white">
                 <div class="info-items">
                     <div class="info-work np-flex-container np-margin-bottom-20">
-                        <div class="tag"><p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Works:</p></div>
+                        <div class="tag">
+                            <p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Works:</p>
+                        </div>
                         <div class="value np-font-open-sans mdl-color-text--grey-500">
                             <p class="np-padding-bottom-4">Freelancer from 2017</p>
                             <p>Former Android and web developer at <span class="np-text-color-primary">Fancymonk 2015-2016</span></p>
                         </div>
                     </div>
-                    <div class="info-alma-matter np-flex-container np-margin-bottom-4">
-                        
-                        <div class="tag"><p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Alma Matter:</p></div>
+                    <div class="info-alma-mater np-flex-container np-margin-bottom-12">
+
+                        <div class="tag">
+                            <p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Alma Mater:</p>
+                        </div>
                         <div class="value np-font-open-sans mdl-color-text--grey-500">
                             <p class="np-text-color-primary np-padding-bottom-4">IIT Kharagpur (B. Tech.)</p>
                         </div>
                     </div>
-                    <div class="info-school np-flex-container np-margin-bottom-12">
+                    <!--div class="info-school np-flex-container np-margin-bottom-12">
                         
                         <div class="tag"><p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">School:</p></div>
                         <div class="value np-font-open-sans mdl-color-text--grey-500">
                             <p class="np-padding-bottom-4">Bal Vidya Niketan <span class="np-text-color-primary">class of 2010</span> </p>
                         </div>
-                    </div>
+                    </div-->
                     <div class="info-hobby np-flex-container">
-                        <div class="tag"><p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Hobbies:</p></div>
+                        <div class="tag">
+                            <p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Hobbies:</p>
+                        </div>
                         <div class="value np-font-open-sans mdl-color-text--grey-500">
                             <p>PC Gaming, Sketching</p>
                         </div>
                     </div>
                 </div>
-
             </div>
-
-
-
             <np-project-view></np-project-view>
-
-
         </div>
     </div>
 
