--- a/src/app/ui/home/home.component.scss
+++ b/src/app/ui/home/home.component.scss
@@ -11,7 +11,7 @@
   background: rgba(0,0,0,0.4);
 }
 .top-wall{
-  background: url("http://localhost:4200/assets/img/3f12541.jpg") no-repeat center center;
+  background: url("/assets/img/3f12541.jpg") no-repeat center center;
   
     background-size: cover;
 }
