--- a/src/app/ui/portfolio/portfolio.component.html
+++ b/src/app/ui/portfolio/portfolio.component.html
@@ -1,7 +1,39 @@
- <div class="code np-flex-container np-flex-align-center np-flex-justify-content">
-                <code class="np-color-white np-hover-card-up" contentEditable="true">
-                <p>function <span class="function">hello</span>() {{ '{' }}</p>
-                <p>  Log.<span class="function">v</span>("hello", "Visitor");</p>
-                <p>{{ '}' }}</p>
-            </code>
+<div class="np-layout-content">
+    <div class="portfolio">
+        <div class="title np-text-align-center">
+            <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">portfolio</span></h6>
+        </div>
+        <div class="np-container-large np-padding-bottom-32">
+            <div class="np-border-2 np-hover-card-up info-card  card-product">
+                <div class="np-flex-container product">
+                    <div class="product-info np-color-fancymonk np-text-color-white np-padding-20">
+                        <div class="heading np-margin-bottom-20">
+                            <h4 class="np-font-comfortaa np-font-14 np-font-light">Fancymonk App</h4>
+                        </div>
+                        <div class="product-detail">
+                            <p class="np-font-open-sans np-font-12 np-font-light">lorem ipsum delta a sorve. werser qwe rtdf fv eereb.</p>
+                        </div>
+                        <div class="product-technology">
+                            <h6 class="np-font-comfortaa np-font-12 np-font-light">Technologies</h6>
+
+                        </div>
+                        <div class="product-link">
+
+                        </div>
+                    </div>
+                    <div class="np-color-white product-canvas">
+                        <div class="avatar">
+                            <img src="asset/"/>
+                        </div>
+                    </div>
+                </div>
+
             </div>
+
+
+
+        </div>
+
+    </div>
+
+</div>
