--- a/src/app/ui/portfolio/portfolio.component.scss
+++ b/src/app/ui/portfolio/portfolio.component.scss
@@ -1,4 +1,60 @@
 
+
+
+
+.portfolio{
+
+    .title{
+        padding: 28px 0 28px 0;
+    }
+
+    .card-product{
+
+      .product{
+            flex-flow: row wrap;
+            align-items: stretch;
+            padding: 0;
+            margin: 0;
+            min-height: 200px;
+            
+            .product-info{
+              order: 0;
+              box-sizing: border-box;
+              min-width: 300px;
+              h6,h4,p{
+                margin: 0;
+                line-height: 1.3;
+              }
+            }
+            .product-canvas{
+              flex-grow: 1;
+              box-sizing: border-box;
+              min-width: 300px;
+            }
+      }
+    }
+}
+
+@media (max-width: 660px) {
+
+  .portfolio{
+
+    .card-product{
+
+        .product{
+              
+              .product-info{
+                order: 1;
+              }
+              .product-canvas{
+                flex-grow: 1;
+                order: 0;
+              }
+        }
+      }
+  }
+}
+
 /****************************
  *                         SERVICE
  */
