--- a/src/app/ui/portfolio/portfolio.component.html
+++ b/src/app/ui/portfolio/portfolio.component.html
@@ -6,24 +6,36 @@
         <div class="np-container-large np-padding-bottom-32">
             <div class="np-border-2 np-hover-card-up info-card  card-product">
                 <div class="np-flex-container product">
-                    <div class="product-info np-color-fancymonk np-text-color-white np-padding-20">
-                        <div class="heading np-margin-bottom-20">
+                    <div class="product-info np-flex-column np-flex-wrapper np-color-fancymonk np-text-color-white">
+                        <div class="heading np-margin-bottom-16">
+                            <img src="/assets/img/ic_fancy_monk_white_128.png"/>
                             <h4 class="np-font-comfortaa np-font-14 np-font-light">Fancymonk App</h4>
                         </div>
-                        <div class="product-detail">
-                            <p class="np-font-open-sans np-font-12 np-font-light">lorem ipsum delta a sorve. werser qwe rtdf fv eereb.</p>
+                        <div class="product-detail np-margin-bottom-20">
+                            <p class="np-font-open-sans np-font-12 np-font-light np-padding-left-8">lorem ipsum delta a sorve. werser qwe rtdf fv eereb.</p>
                         </div>
-                        <div class="product-technology">
-                            <h6 class="np-font-comfortaa np-font-12 np-font-light">Technologies</h6>
+                        <div class="product-features">
+                            <h6 class="np-font-comfortaa np-font-14 np-font-light">Features</h6>
+                            <ul class="np-list-vertical np-font-open-sans np-font-12 np-font-light np-padding-left-8">
+                                <li>Near By GPS Search</li>
+                                <li>Payment System RazorPay</li>
+                                <li>Messaging</li>
+                                <li>Faceook/Google login</li>
+                                <li>FCM Notification</li>
+                                <li>Google Map</li>
+                                <li>Real Time</li>
+                            </ul>
+
 
                         </div>
+                        <mdl-layout-spacer></mdl-layout-spacer>
                         <div class="product-link">
-
+                            <button mdl-button mdl-ripple>Play Store</button>
                         </div>
                     </div>
                     <div class="np-color-white product-canvas">
-                        <div class="avatar">
-                            <img src="asset/"/>
+                        <div class="avatar np-flex-container">
+                            <img src="/assets/img/fancymonk_app.png"/>
                         </div>
                     </div>
                 </div>
