added portfolio items

--- a/src/app/theme/sass/_dimen.scss
+++ b/src/app/theme/sass/_dimen.scss
@@ -31,6 +31,10 @@
   padding-bottom: 2px;
 }
 
+.np-padding-left-16{
+  padding-left: 16px;
+}
+
 .np-padding-left-8{
   padding-left: 8px;
 }
@@ -50,6 +54,9 @@
   margin-bottom: 40px;
 }
 
+.np-margin-bottom-32{
+  margin-bottom: 32px;
+}
 
 .np-margin-bottom-20{
   margin-bottom: 20px;
