--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -62,6 +62,48 @@ width: 100%;
   vertical-align: middle;
 }
 
+/***********************************
+           flex
+
+*/
+
+.np-flex-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  
+}
+.np-flex-stretch{
+  align-items: stretch;
+
+}
+
+.np-flex-row{
+  flex-direction: row;
+}
+
+.np-flex-column{
+  flex-direction: column;
+}
+
+
+
+
+/***************************************************8
+                ul
+*/
+
+.np-list-vertical{
+
+            list-style: none;
+
+            li {
+                display: block;
+                line-height: 1.4;
+                margin: 2px auto; 
+            }
+}
+
+
 .np-layout-align-middle{
   vertical-align: middle;
 }
