--- a/src/app/ui/portfolio/portfolio-item.component.scss
+++ b/src/app/ui/portfolio/portfolio-item.component.scss
@@ -38,13 +38,17 @@
             min-width: 300px;
             .avatar{
                 
-                height: auto;
+                position: relative;
+                height: 100%;
+                max-height: 464px;
                 width: 100%;
                 img{
-                    max-height: 500px;
-                    height: auto;
-                    max-width:100%;
-                    width:auto;
+                    ///width:100%;
+                    max-height:100%;
+                    max-width: 464px;
+                    // max-height: 500px;
+                    // height: 100%;
+                    // width:auto;
                     margin: auto;
                 }
             }
@@ -59,6 +63,7 @@
 
         .product{
         
+        flex-flow: row wrap;
             .product-info{
                 padding: 20px;
                 order: 1;
@@ -86,6 +91,7 @@
 
         .product{
         
+        flex-flow: row nowrap;
             .product-info{
                 width: 300px;     
             }
