--- a/src/app/ui/portfolio/portfolio-item.component.scss
+++ b/src/app/ui/portfolio/portfolio-item.component.scss
@@ -41,11 +41,13 @@
                 position: relative;
                 height: 100%;
                 max-height: 464px;
-                width: 100%;
+                max-width: 464px;
+                margin: auto;
                 img{
                     ///width:100%;
                     max-height:100%;
-                    max-width: 464px;
+                    //max-width: 464px;
+                    max-width: 100%;
                     // max-height: 500px;
                     // height: 100%;
                     // width:auto;
@@ -77,7 +79,9 @@
                 .avatar{
 
                     img{
+                        max-width: 100%;
                         max-height: 400px;
+                        height: auto;
                     }
                 }
             }
@@ -98,6 +102,7 @@
              .product-canvas{
                 .avatar{
                     min-height: 300px;
+                    width: 100%;
                 }
             }
         }
