contact me added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -106,7 +106,7 @@
                 <a class="mdl-navigation__link"  routerLink="/home" routerLinkActive="indicator-primary-important np-text-color-important-primary">Home</a>
                 <a class="mdl-navigation__link" routerLink="/portfolio" routerLinkActive="indicator-primary-important np-text-color-important-primary">Portfolio</a>
                 <a class="mdl-navigation__link" routerLink="/about" routerLinkActive="indicator-primary-important np-text-color-important-primary">About</a>
-                <a class="mdl-navigation__link" routerLink="/profile" routerLinkActive="indicator-primary-important np-text-color-important-primary">Contact</a>
+                <a class="mdl-navigation__link" routerLink="/contact" routerLinkActive="indicator-primary-important np-text-color-important-primary">Contact</a>
             </nav>
         </mdl-layout-header-row>
     </mdl-layout-header>
