--- a/src/app/theme/sass/_color.scss
+++ b/src/app/theme/sass/_color.scss
@@ -13,6 +13,15 @@
     background: $np-color-primary !important;
 }
 
+.np-color-primary-dark{
+    background: $np-color-primary-dark;
+}
+
+.np-color-primary-light{
+    background: $np-color-primary-light;
+}
+
+
 .np-color-primary-alpha-6{
     background: $np-color-primary-alpha-6 !important;
     background-color: $np-color-primary-alpha-6 !important;
