--- a/src/app/theme/sass/_text.scss
+++ b/src/app/theme/sass/_text.scss
@@ -13,8 +13,12 @@
    color: $np-color-grey-default !important;
 }
 
-.np-text-color-primary-light{
+.np-text-color-primary-50{
     color: $np-color-primary-50;
+}
+
+.np-text-color-primary-light{
+    color: $np-color-primary-light;
 }
 
 .np-text-color-accent{
@@ -27,6 +31,8 @@
 .np-text-color-important-primary{
     color: $np-color-primary !important;
 }
+
+
 
 
 .np-text-color-grey-dark-extra{
