--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -62,6 +62,10 @@ width: 100%;
   vertical-align: middle;
 }
 
+.np-align-vertical-middle{
+  vertical-align: middle;
+}
+
 /***********************************
            flex
 
