--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ $color-accent: $palette-blue-700;
 $color-primary-contrast: $color-dark-contrast;
 $color-accent-contrast: $color-dark-contrast;
 
+$np-color-primary-light: #a8e3e5;
 $np-color-primary-50: #e9f8f8 !default;
 $np-color-back-grey:  unquote("rgb(#{$palette-grey-50})");
 $np-color-back-grey-dark: unquote("rgb(#{$palette-grey-700})");
