--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -95,19 +95,19 @@
 </mdl-layout-->
 
 
+
 <mdl-layout mdl-layout-no-drawer-button mdl-layout-fixed-header mdl-layout-header-seamed mdl-layout-mode="waterfall" #mainLayout="mdlLayout">
     <mdl-layout-header class="main-header">
         <mdl-layout-header-row class="main-header-row">
 
             <mdl-layout-title class="np-text-color-grey-dark-extra np-font-open-sans">{{title}}</mdl-layout-title>
             <mdl-layout-spacer></mdl-layout-spacer>
-            <!-- Navigation. We hide it in small screens. -->
-            <nav class="np-font-open-sans mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link"  routerLink="/home" routerLinkActive="indicator-primary-important np-text-color-important-primary">Home</a>
-                <a class="mdl-navigation__link" routerLink="/portfolio" routerLinkActive="indicator-primary-important np-text-color-important-primary">Portfolio</a>
+            <!--nav class="np-font-open-sans mdl-navigation mdl-layout--large-screen-only">
+                <a class="mdl-navigation__link" pageScroll routerLink="/footer" href="#home" routerLinkActive="indicator-primary-important np-text-color-important-primary">Home</a>
+                <a class="mdl-navigation__link" pageScroll routerLink="/footer" href="#portfolio" routerLinkActive="indicator-primary-important np-text-color-important-primary">Portfolio</a>
                 <a class="mdl-navigation__link" routerLink="/about" routerLinkActive="indicator-primary-important np-text-color-important-primary">About</a>
                 <a class="mdl-navigation__link" routerLink="/contact" routerLinkActive="indicator-primary-important np-text-color-important-primary">Contact</a>
-            </nav>
+            </nav-->
         </mdl-layout-header-row>
     </mdl-layout-header>
 
@@ -166,10 +166,6 @@
         </div>
 
     </mdl-layout-content>
-
-    <!--div *ngIf="mainLayout.isSmallScreen" class="mdl-layout__drawer-button" (click)="mainLayout.toggleDrawer()">
-        <mdl-icon>&#xE5D2;</mdl-icon>
-    </div-->
 </mdl-layout>
 <div *ngIf="mainLayout.isSmallScreen" class="mdl-layout__drawer-button" mdl-ripple  (click)="mainLayout.toggleDrawer()">
     <mdl-icon class="np-text-color-dark">&#xE5D2;</mdl-icon>
