--- a/src/app/ui/contact/contact.component.html
+++ b/src/app/ui/contact/contact.component.html
@@ -71,9 +71,9 @@
     
 </div-->
 
-<div class="np-layout-content">
+<div class="np-layout-content np-padding-bottom-32">
     <div class="np-container-large">
-        <div class="np-shadow-card-up">
+        <div class="np-shadow-card">
             <div class="np-flex-container contact">
                 <div class="contact-form np-flex-column np-flex-wrapper np-color-white">
 
