--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -4,13 +4,13 @@
         <div class="np-layout-content wall-frame">
             <div class="np-flex-layout np-flex-align-items">
                 <div class="profile">
-                    <h4 class="np-font-open-sans np-text-color-white np-text-align-center np-font-light">Welcome to my app development page...</h4>
+                    <h4 class="np-font-open-sans np-text-color-white np-text-align-center np-font-light">Android and Wed Innovation</h4>
                 </div>
 
                 <div class="np-margin-top-32">
 
                     <div class="profile-action np-font-open-sans">
-                        <button mdl-button mdl-button-type="raised" mdl-colored="primary" class="np-color-primary-alpha-6" mdl-ripple><span class="np-font-open-sans np-font-12">See Portfolio</span></button>
+                        <button mdl-button mdl-button-type="raised" mdl-colored="primary" class="np-color-primary-alpha-6" mdl-ripple><span class="np-font-open-sans np-font-12">Download CV</span></button>
 
                         <!--button mdl-button mdl-colored="primary" mdl-ripple><span class="np-font-open-sans np-font-12 np-font-bold">Download CV</span></button-->
                     </div>
