--- a/src/app/ui/contact/contact.component.html
+++ b/src/app/ui/contact/contact.component.html
@@ -152,3 +152,11 @@
         </div>
     </div>
 </div>
+
+<div id="map-section">
+    <ngui-map [options]="_mMapOptions"  disableDefaultUI="true" zoom="13"
+  center="12.937700, 77.632453" styles="_mMapStyles">
+   <marker position="12.937700, 77.632453">
+   </marker>
+   </ngui-map>
+</div>
