--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -1,8 +1,8 @@
-<home-view id="home">
+<!--home-view id="home">
 </home-view>
 <portfolio-view id="portfolio"></portfolio-view>
 <about-view id="about"></about-view>
-<contact-view id="contact"></contact-view>
+<contact-view id="contact"></contact-view-->
 
 
 
