--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,140 +1,15 @@
-.router-outlet {
-  flex-grow: 1;
-  flex-shrink: 0;
-}
-
-
-main {
-  display: flex !important;
-  flex-direction: row;
-}
-
-
-.main-header{
-  background-color: white;
-}
-
-.main-header-row .mdl-navigation__link {
-    display: inline-block;
-    height: 62px;
-    line-height: 69px;
-    color: #757575;
-    background-color: transparent !important;
-    border-bottom: 2px solid transparent;
-  }
-.main-header-row .is-active{
-      border-bottom: 2px solid #000;
-}
-
-.main-footer {
-  flex-grow: 1;
-}
-
-footer {
-	z-index: 1;
-  flex-shrink: 0;
-  background: #37474f;
-}
-
-
-
-.app-main-content {
-  display: flex;
-  flex-direction: column;
-}
-
-.main-content {
+/*.main-content {
   display: flex;
   flex-direction: column;
   align-items: stretch;
   flex-grow: 1;
 }
 
+.router-outlet {
+  flex-grow: 1;
+  flex-shrink: 0;
+}*/
 
-
-
-.icon svg {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  vertical-align: middle;
-}
-
-
-/******************************
-drawer 
-*/
-
-.np-drawer {
-    border: none;
-
-    .np-navigation {
-        -webkit-flex-grow: 1;
-        -ms-flex-positive: 1;
-        flex-grow: 1;
-        /* iOS Safari specific workaround */
-        z-index: -2;
-        .mdl-navigation__link {
-          cursor: pointer;
-        }
-    }
-
-
-    .nav-header{
-        box-sizing: border-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        -webkit-justify-content: flex-end;
-        -ms-flex-pack: end;
-        justify-content: flex-end;
-        padding: 16px;
-        min-height: 151px;
-    }
-    .nav-avatar-container{
-        
-        margin:40px auto 10px;
-        background: rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-        padding: 6px;
-    }
-    .nav-avatar {
-        width: 56px;
-        height: 56px;
-        border-radius: 28px;
-    }
-    .nav-title{
-        margin: 0;
-
-    }
-    .nav-subtitle{
-        margin: 0;
-    }
-/*************8
-*/
-
-    .nav-bottom{
-        color: #3d4451;
-        border-top: 1px solid #dedede;
-
-        .social {
-            margin: 0;
-            padding: 0;
-            list-style: none;
-            text-align: center; 
-
-            li {
-                display: inline-block;
-                margin: 5px auto; 
-
-                button .socialicon{
-                    font-size: 12px;
-                    display: block;
-                }
-            }
-        }
-    }
+.mdl-layout__container{
+    position: static !important;
 }
