--- a/src/app/ui/onepage/onepage.component.html
+++ b/src/app/ui/onepage/onepage.component.html
@@ -1,22 +1,20 @@
-
-
-
-<!--mdl-layout mdl-layout-no-drawer-button mdl-layout-fixed-header mdl-layout-header-seamed mdl-layout-mode="waterfall" #mainLayout="mdlLayout">
+<mdl-layout mdl-layout-no-drawer-button mdl-layout-fixed-header mdl-layout-header-seamed mdl-layout-mode="waterfall" #mainLayout="mdlLayout">
     <mdl-layout-header class="main-header">
         <mdl-layout-header-row class="main-header-row">
 
             <mdl-layout-title class="np-text-color-grey-dark-extra np-font-open-sans">{{title}}</mdl-layout-title>
             <mdl-layout-spacer></mdl-layout-spacer>
+            <!-- Navigation. We hide it in small screens. -->
             <nav class="np-font-open-sans mdl-navigation mdl-layout--large-screen-only">
-                <a class="mdl-navigation__link" pageScroll routerLink="/footer" href="#home" routerLinkActive="indicator-primary-important np-text-color-important-primary">Home</a>
-                <a class="mdl-navigation__link" pageScroll routerLink="/footer" href="#portfolio" routerLinkActive="indicator-primary-important np-text-color-important-primary">Portfolio</a>
-                <a class="mdl-navigation__link" routerLink="/about" routerLinkActive="indicator-primary-important np-text-color-important-primary">About</a>
-                <a class="mdl-navigation__link" routerLink="/contact" routerLinkActive="indicator-primary-important np-text-color-important-primary">Contact</a>
+                <a class="np-cursor mdl-navigation__link" (click)="onClickNav(idNavHome)" routerLinkActive="indicator-primary-important np-text-color-important-primary">Home</a>
+                <a class="np-cursor mdl-navigation__link" (click)="onClickNav(idNavPortfolio)" routerLinkActive="indicator-primary-important np-text-color-important-primary">Portfolio</a>
+                <a class="np-cursor mdl-navigation__link" (click)="onClickNav(idNavAbout)" routerLinkActive="indicator-primary-important np-text-color-important-primary">About</a>
+                <a class="np-cursor mdl-navigation__link" (click)="onClickNav(idNavContanct)" routerLinkActive="indicator-primary-important np-text-color-important-primary">Contact</a>
             </nav>
         </mdl-layout-header-row>
     </mdl-layout-header>
 
-     <mdl-layout-drawer class="np-drawer np-color-primary np-text-color-primary-light">
+      <mdl-layout-drawer class="np-drawer np-color-primary np-text-color-primary-light">
         <header class="nav-header np-shadow-inner">
             <div class="mdl-layout-spacer"></div>
             <div class="nav-avatar-container">
@@ -29,10 +27,10 @@
         </header>
 
         <nav class="np-navigation mdl-navigation np-font-open-sans np-font-light np-color-white mdl-color-text--grey-800">
-            <a class="mdl-navigation__link np-selector-text-grey-to-primary"><mdl-icon class="np-margin-right-24 np-font-20">home</mdl-icon>Home</a>
-            <a class="mdl-navigation__link np-selector-text-grey-to-primary"><mdl-icon class="np-margin-right-24 np-font-20">description</mdl-icon>Portfolio</a>
-            <a class="mdl-navigation__link np-selector-text-grey-to-primary"><mdl-icon class="np-margin-right-24 np-font-20">perm_identity</mdl-icon>About</a>
-            <a class="mdl-navigation__link np-selector-text-grey-to-primary"><mdl-icon class="np-margin-right-24 np-font-20">contacts</mdl-icon>Contact</a>
+            <a class="mdl-navigation__link np-selector-text-grey-to-primary" (click)="onClickNav(idNavHome)"><mdl-icon class="np-margin-right-24 np-font-20">home</mdl-icon>Home</a>
+            <a class="mdl-navigation__link np-selector-text-grey-to-primary" (click)="onClickNav(idNavPortfolio)"><mdl-icon class="np-margin-right-24 np-font-20">description</mdl-icon>Portfolio</a>
+            <a class="mdl-navigation__link np-selector-text-grey-to-primary" (click)="onClickNav(idNavAbout)"><mdl-icon class="np-margin-right-24 np-font-20">perm_identity</mdl-icon>About</a>
+            <a class="mdl-navigation__link np-selector-text-grey-to-primary" (click)="onClickNav(idNavContanct)"><mdl-icon class="np-margin-right-24 np-font-20">contacts</mdl-icon>Contact</a>
             <div class="mdl-layout-spacer"></div>
             <div class="nav-bottom">
                 <ul class="social">
@@ -60,19 +58,17 @@
             </div>
         </nav>
     </mdl-layout-drawer>
-
-
     <mdl-layout-content>
-    
+        <div class="main-content">
 
+            <home-view id="home"></home-view>
+            <portfolio-view id="portfolio"></portfolio-view>
+            <about-view id="about"></about-view>
+            <contact-view id="contact"></contact-view>
+            <footer-view id="footer"></footer-view>
+        </div>
     </mdl-layout-content>
 </mdl-layout>
-<div *ngIf="mainLayout.isSmallScreen" class="mdl-layout__drawer-button" mdl-ripple  (click)="mainLayout.toggleDrawer()">
+<div *ngIf="mainLayout.isSmallScreen" class="np-drawer-button mdl-layout__drawer-button" mdl-ripple  (click)="mainLayout.toggleDrawer()">
     <mdl-icon class="np-text-color-dark">&#xE5D2;</mdl-icon>
 </div>
- mdl-layout-fixed-header mdl-layout-header-seamed mdl-layout-mode="waterfall"-->
-
- <div class="router-outlet">
-               
- <router-outlet></router-outlet>
-            </div>
