drawer attach nav

--- a/src/app/ui/onepage/onepage.component.html
+++ b/src/app/ui/onepage/onepage.component.html
@@ -27,10 +27,10 @@
         </header>
 
         <nav class="np-navigation mdl-navigation np-font-open-sans np-font-light np-color-white mdl-color-text--grey-800">
-            <a class="mdl-navigation__link np-selector-text-grey-to-primary" (click)="onClickNav(idNavHome)"><mdl-icon class="np-margin-right-24 np-font-20">home</mdl-icon>Home</a>
-            <a class="mdl-navigation__link np-selector-text-grey-to-primary" (click)="onClickNav(idNavPortfolio)"><mdl-icon class="np-margin-right-24 np-font-20">description</mdl-icon>Portfolio</a>
-            <a class="mdl-navigation__link np-selector-text-grey-to-primary" (click)="onClickNav(idNavAbout)"><mdl-icon class="np-margin-right-24 np-font-20">perm_identity</mdl-icon>About</a>
-            <a class="mdl-navigation__link np-selector-text-grey-to-primary" (click)="onClickNav(idNavContanct)"><mdl-icon class="np-margin-right-24 np-font-20">contacts</mdl-icon>Contact</a>
+            <a class="mdl-navigation__link np-selector-text-grey-to-primary" (click)="onClickNavDrawer(idNavHome)"><mdl-icon class="np-margin-right-24 np-font-20">home</mdl-icon>Home</a>
+            <a class="mdl-navigation__link np-selector-text-grey-to-primary" (click)="onClickNavDrawer(idNavPortfolio)"><mdl-icon class="np-margin-right-24 np-font-20">description</mdl-icon>Portfolio</a>
+            <a class="mdl-navigation__link np-selector-text-grey-to-primary" (click)="onClickNavDrawer(idNavAbout)"><mdl-icon class="np-margin-right-24 np-font-20">perm_identity</mdl-icon>About</a>
+            <a class="mdl-navigation__link np-selector-text-grey-to-primary" (click)="onClickNavDrawer(idNavContanct)"><mdl-icon class="np-margin-right-24 np-font-20">contacts</mdl-icon>Contact</a>
             <div class="mdl-layout-spacer"></div>
             <div class="nav-bottom">
                 <ul class="social">
