--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -53,10 +53,16 @@ width: 100%;
 .np-flex-align-center{
   align-items: center;
 }
+.np-flex-align-end{
+  align-items: flex-end;
+}
 .np-flex-justify-content{
   justify-content: center;
 }
 
+.np-flex-justify-content-right{
+  justify-content: flex-end;
+}
 .np-flex-align-vertical-middle{
 
   vertical-align: middle;
@@ -111,6 +117,7 @@ width: 100%;
 .np-layout-align-middle{
   vertical-align: middle;
 }
+
 
 .np-margin-auto-horizontal{
   margin: 0 auto;
