--- a/src/app/theme/sass/_text.scss
+++ b/src/app/theme/sass/_text.scss
@@ -2,6 +2,10 @@
     text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
+.np-text-shadow-decent{
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1), 1px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
 .np-text-color-dark{
     color: $np-color-grey-dark;
 }
