--- a/src/app/theme/sass/draw/_border.scss
+++ b/src/app/theme/sass/draw/_border.scss
@@ -1,3 +1,8 @@
+
+/*********************888
+
+            Added
+*/
 .indicator-primary-important{
     border-bottom: 2px solid $np-color-primary !important;
 }
@@ -18,6 +23,12 @@
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
     
 }
+
+.np-shadow-card-thin{
+    box-shadow: 0 1px 2px 0 rgba(0,0,0,0.14), 0 1px 3px 0 rgba(0,0,0,0.12), 0 1px 1px -2px rgba(0,0,0,0.2);    
+}
+
+
 .np-shadow-card-up{
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
