bug fixed video, added play btn

--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -129,3 +129,17 @@ width: 100%;
 .np-margin-auto{
   margin: auto;
 }
+
+
+/******
+
+display-table
+*/
+
+.np-display-table{
+  display: table;
+}
+
+.np-display-table-cell{
+  display: table-cell;
+}
